# VUT_FIT_IAL_1HW

./: CMakeLists.txt  README.md
c202/: c202.c
c204/: c204-advanced-test.c  c204.c
c206/: c206.c
